--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Form Validition</title>
+		<title>Form Validation</title>
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<script src="js/style.js"></script>
 	</head>
 	<body>
 		<div id="form_layout">
-			<h2>JavaScript Form Validition</h2>
+			<h2>JavaScript Form Validation</h2>
 			<form onsubmit="return formValidation()"><br/><p id="head"></p><br/>
 
 				<label>Full Name :</label>
