collection in html
collection in html

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 				<input type="submit" id="submit" value="Submit">
 			</form>
 		</div>
+		<h2>Follow Me</h2>
 		<div class="icon">
-			<h2>follow me</h2>
 			<a href="https://www.facebook.com/daniel.t.bate" target="_blank"><i class="fa fa-facebook fb"></i></a>
 			<a href="https://twitter.com/jalalthb?lang=en" target="_blank"><i class="fa fa-twitter twt"></i></a>
 			<a href="https://www.instagram.com/daniel.t.bate/" target="_blank"><i class="fa fa-instagram ins"></i></a>
